--- a/configs/iceberg/dag_inten_train_nist.yaml
+++ b/configs/iceberg/dag_inten_train_nist.yaml
@@ -39,6 +39,7 @@ universal_args:
 
   binned-targs: [true] 
   embed-adduct: [true]
+  embed-collision: [true]
   grad-accumulate: [1]
   encode-forms: [true]
   add-hs: [true]
@@ -46,19 +47,19 @@ universal_args:
 iterative_args:
   -  split-name: [split_1.tsv]
      save-dir: [split_1_rnd1]
-     magma-dag-folder: [results/dag_nist20/split_1_rnd1/preds_train_100_inten/]
+     magma-dag-folder: [results/dag_nist20/split_1_rnd1/preds_train_100_inten.hdf5]
      seed: [1]
 
   -  split-name: [split_1.tsv]
      save-dir: [split_1_rnd2]
-     magma-dag-folder: [results/dag_nist20/split_1_rnd2/preds_train_100_inten/]
+     magma-dag-folder: [results/dag_nist20/split_1_rnd2/preds_train_100_inten.hdf5]
      seed: [2]
 
   -  split-name: [split_1.tsv]
      save-dir: [split_1_rnd3]
-     magma-dag-folder: [results/dag_nist20/split_1_rnd3/preds_train_100_inten/]
+     magma-dag-folder: [results/dag_nist20/split_1_rnd3/preds_train_100_inten.hdf5]
      seed: [3]
 
   -  split-name: [scaffold_1.tsv]
      save-dir: [scaffold_1]
-     magma-dag-folder: [results/dag_nist20/scaffold_1/preds_train_100_inten/]
+     magma-dag-folder: [results/dag_nist20/scaffold_1/preds_train_100_inten.hdf5]
