--- a/configs/iceberg/dag_inten_train_nist.yaml
+++ b/configs/iceberg/dag_inten_train_nist.yaml
@@ -1,8 +1,8 @@
 launcher_args: {experiment_name: dag_inten_nist20,
   script_name: "src/ms_pred/dag_pred/train_inten.py",
   slurm_script: launcher_scripts/generic_slurm.sh, 
-  launch_method: local,
-  visible_devices: [1]
+  launch_method: local_parallel,
+  visible_devices: [0, 1]
 }
 universal_args:
   _slurm_args:
@@ -33,13 +33,14 @@ universal_args:
   frag-set-layers: [3]
   mlp-layers: [1]
   gnn-layers: [4]
-  loss-fn: [cosine]
+  loss-fn: [entropy]
   root-encode: [gnn]
   inject-early: [false]
 
-  binned-targs: [true] 
+  binned-targs: [true]
   embed-adduct: [true]
   embed-collision: [true]
+  embed-elem-group: [true]
   grad-accumulate: [1]
   encode-forms: [true]
   add-hs: [true]
