--- a/configs/iceberg/dag_train_nist20.yaml
+++ b/configs/iceberg/dag_train_nist20.yaml
@@ -1,8 +1,8 @@
 launcher_args: {experiment_name: dag_nist20,
   script_name: "src/ms_pred/dag_pred/train_gen.py",
   slurm_script: launcher_scripts/generic_slurm.sh, 
-  launch_method: local,
-  visible_devices: [1]
+  launch_method: local_parallel,
+  visible_devices: [0, 1]
 }
 universal_args:
   _slurm_args:
@@ -36,6 +36,7 @@ universal_args:
   encode-forms: [True]
   embed-adduct: [True]
   embed-collision: [True]
+  embed-elem-group: [True]
   add-hs: [true]
 
 iterative_args:
