--- a/configs/iceberg/dag_inten_contr_finetune_nist.yaml
+++ b/configs/iceberg/dag_inten_contr_finetune_nist.yaml
@@ -13,18 +13,17 @@ universal_args:
   gpu: [true]
 
   seed: [1]
-  num-workers: [96]
-  batch-size: [16]
-  max-epochs: [5]
+  num-workers: [64]
+  batch-size: [32]
+  max-epochs: [20]
   num-decoys: [3]
-  decoy-generation: ['pubchem'] # ['mutation']
 
   dataset-name: [nist20]
   split-name: [split_1.tsv]
 
-  learning-rate: [1.28e-7] #[0.00000736]
+  learning-rate: [0.0005]
   lr-decay-rate: [0.825]
-  contr-weight: [0.1]
+  contr-weight: [1]
 
   dropout: [0.1]
   mpnn-type: [GGNN]
@@ -36,13 +35,14 @@ universal_args:
   frag-set-layers: [3]
   mlp-layers: [1]
   gnn-layers: [4]
-  loss-fn: [cosine]
+  loss-fn: [entropy]
   root-encode: [gnn]
   inject-early: [false]
 
   binned-targs: [true] 
   embed-adduct: [true]
   embed-collision: [true]
+  embed-elem-group: [true]
   grad-accumulate: [1]
   encode-forms: [true]
   add-hs: [true]
@@ -52,20 +52,26 @@ iterative_args:
   -  split-name: [split_1.tsv]
      save-dir: [split_1_rnd1]
      magma-dag-folder: [results/dag_nist20/split_1_rnd1/preds_train_100_inten.hdf5]
-     gen-checkpoint: [results/dag_nist20/split_1_rnd1/version_0/best.ckpt]
+     decoy-path: [results/dag_nist20/split_1_rnd1/preds_train_100/decoy_tree_preds.hdf5]
      train-checkpoint: [results/dag_inten_nist20/split_1_rnd1/version_0/best.ckpt]
      seed: [1]
 
-#  -  split-name: [split_1.tsv]
-#     save-dir: [split_1_rnd2]
-#     magma-dag-folder: [results/dag_nist20/split_1_rnd2/preds_train_100_inten.hdf5]
-#     seed: [2]
-#
-#  -  split-name: [split_1.tsv]
-#     save-dir: [split_1_rnd3]
-#     magma-dag-folder: [results/dag_nist20/split_1_rnd3/preds_train_100_inten.hdf5]
-#     seed: [3]
-#
-#  -  split-name: [scaffold_1.tsv]
-#     save-dir: [scaffold_1]
-#     magma-dag-folder: [results/dag_nist20/scaffold_1/preds_train_100_inten.hdf5]
+  -  split-name: [split_1.tsv]
+     save-dir: [split_1_rnd2]
+     magma-dag-folder: [results/dag_nist20/split_1_rnd2/preds_train_100_inten.hdf5]
+     decoy-path: [results/dag_nist20/split_1_rnd2/preds_train_100/decoy_tree_preds.hdf5]
+     train-checkpoint: [results/dag_inten_nist20/split_1_rnd2/version_0/best.ckpt]
+     seed: [2]
+
+  -  split-name: [split_1.tsv]
+     save-dir: [split_1_rnd3]
+     magma-dag-folder: [results/dag_nist20/split_1_rnd3/preds_train_100_inten.hdf5]
+     decoy-path: [results/dag_nist20/split_1_rnd3/preds_train_100/decoy_tree_preds.hdf5]
+     train-checkpoint: [results/dag_inten_nist20/split_1_rnd3/version_0/best.ckpt]
+     seed: [3]
+
+  -  split-name: [scaffold_1.tsv]
+     save-dir: [scaffold_1]
+     magma-dag-folder: [results/dag_nist20/scaffold_1/preds_train_100_inten.hdf5]
+     decoy-path: [results/dag_nist20/scaffold_1/preds_train_100/decoy_tree_preds.hdf5]
+     train-checkpoint: [results/dag_inten_nist20/scaffold_1/version_0/best.ckpt]
