--- a/configs/iceberg/dag_gen_predict_train_msg_allev.yaml
+++ b/configs/iceberg/dag_gen_predict_train_msg_allev.yaml
@@ -13,6 +13,8 @@ universal_args:
 
   batch-size: [8]
   dataset-name: [msg]
+  dataset-labels: [labels_withev.tsv]
+
   num-workers: [12]
   threshold: [0.0]
   max-nodes: [100]
@@ -21,7 +23,7 @@ universal_args:
 iterative_args:
 
   -  split-name: [split.tsv]
-     checkpoint-pth: [results/dag_msg_allev/split_rnd1/version_10/best.ckpt]
+     checkpoint-pth: [results/dag_msg_allev/split_rnd1/version_0/best.ckpt]
      save-dir: [split_1_rnd1/preds_train_100]
 
   -  split-name: [split.tsv]
