updates to configs [03/04 scripts] + add_dag_intens check

--- a/configs/iceberg/dag_gen_predict_train_msg_allev.yaml
+++ b/configs/iceberg/dag_gen_predict_train_msg_allev.yaml
@@ -2,7 +2,7 @@ launcher_args: {experiment_name: dag_msg_allev,
   script_name: "src/ms_pred/dag_pred/predict_gen.py",
   slurm_script: launcher_scripts/generic_slurm.sh, 
   launch_method: local,
-  visible_devices: [0, 1],
+  visible_devices: [1],
 }
 universal_args:
   _slurm_args:
@@ -13,9 +13,8 @@ universal_args:
 
   batch-size: [8]
   dataset-name: [msg]
-  dataset-labels: [labels_withev.tsv]
-
-  num-workers: [12]
+  dataset-labels: [labels_withev_validinst.tsv]
+  num-workers: [6]
   threshold: [0.0]
   max-nodes: [100]
   num-decoys: [0, 10] # predict target structures + 10 decoys
@@ -24,14 +23,14 @@ iterative_args:
 
   -  split-name: [split.tsv]
      checkpoint-pth: [results/dag_msg_allev/split_rnd1/version_0/best.ckpt]
-     save-dir: [split_1_rnd1/preds_train_100]
+     save-dir: [split_rnd1/preds_train_100]
 
   -  split-name: [split.tsv]
      checkpoint-pth: [results/dag_msg_allev/split_rnd2/version_0/best.ckpt]
-     save-dir: [split_1_rnd2/preds_train_100]
+     save-dir: [split_rnd2/preds_train_100]
 
   -  split-name: [split.tsv]
      checkpoint-pth: [results/dag_msg_allev/split_rnd3/version_0/best.ckpt]
-     save-dir: [split_1_rnd3/preds_train_100]
+     save-dir: [split_rnd3/preds_train_100]
 
 
