--- a/configs/iceberg/dag_inten_train_msg_allev.yaml
+++ b/configs/iceberg/dag_inten_train_msg_allev.yaml
@@ -19,6 +19,7 @@ universal_args:
 
   dataset-name: [msg]
   split-name: [split.tsv]
+  dataset-labels: [labels_withev_validinst.tsv]
 
   learning-rate: [0.000736]
   lr-decay-rate: [0.825]
@@ -41,6 +42,7 @@ universal_args:
   binned-targs: [true]
   embed-adduct: [true]
   embed-collision: [true]
+  embed-instrument: [true]
   embed-elem-group: [true]
   grad-accumulate: [1]
   encode-forms: [true]
