Tweak inten model training to track cosine; and don't use hung matching

--- a/configs/iceberg/dag_inten_train_msg_allev_entropy.yaml
+++ b/configs/iceberg/dag_inten_train_msg_allev_entropy.yaml
@@ -27,6 +27,7 @@ universal_args:
   dropout: [0.1]
   mpnn-type: [GGNN]
   pe-embed-k: [0]
+  min-epochs: [50]
   pool-op: [avg]
   hidden-size: [256]
   weight-decay: [1e-7]
@@ -35,6 +36,7 @@ universal_args:
   mlp-layers: [1]
   gnn-layers: [4]
   loss-fn: [entropy]
+  track-cosine: [true]
   root-encode: [gnn]
   inject-early: [false]
 
@@ -53,16 +55,16 @@ universal_args:
 
 iterative_args:
   -  split-name: [split.tsv]
-     save-dir: [split_1_rnd1]
+     save-dir: [split_1_rnd1_entropy]
      magma-dag-folder: [results/dag_msg_allev/split_rnd1/preds_train_100_inten.hdf5]
      seed: [1]
 
   -  split-name: [split.tsv]
-     save-dir: [split_1_rnd2]
+     save-dir: [split_1_rnd2_entropy]
      magma-dag-folder: [results/dag_msg_allev/split_rnd2/preds_train_100_inten.hdf5]
      seed: [2]
 
   -  split-name: [split.tsv]
-     save-dir: [split_1_rnd3]
+     save-dir: [split_1_rnd3_entropy]
      magma-dag-folder: [results/dag_msg_allev/split_rnd3/preds_train_100_inten.hdf5]
      seed: [3]
