update iceberg runscripts

--- a/configs/iceberg/dag_gen_predict_train_nist20.yaml
+++ b/configs/iceberg/dag_gen_predict_train_nist20.yaml
@@ -24,14 +24,22 @@ iterative_args:
      checkpoint-pth: [results/dag_nist20/split_1_rnd1/version_0/best.ckpt]
      save-dir: [split_1_rnd1/preds_train_100]
 
-  -  split-name: [split_1.tsv]
-     checkpoint-pth: [results/dag_nist20/split_1_rnd2/version_0/best.ckpt]
-     save-dir: [split_1_rnd2/preds_train_100]
-
-  -  split-name: [split_1.tsv]
-     checkpoint-pth: [results/dag_nist20/split_1_rnd3/version_0/best.ckpt]
-     save-dir: [split_1_rnd3/preds_train_100]
-
-  -  split-name: [scaffold_1.tsv]
-     checkpoint-pth: [results/dag_nist20/scaffold_1/version_0/best.ckpt]
-     save-dir: [scaffold_1/preds_train_100]
+#  -  split-name: [split_1.tsv]
+#     checkpoint-pth: [results/dag_nist20/split_1_rnd2/version_0/best.ckpt]
+#     save-dir: [split_1_rnd2/preds_train_100]
+#
+#  -  split-name: [split_1.tsv]
+#     checkpoint-pth: [results/dag_nist20/split_1_rnd3/version_0/best.ckpt]
+#     save-dir: [split_1_rnd3/preds_train_100]
+#
+#  -  split-name: [scaffold_1.tsv]
+#     checkpoint-pth: [results/dag_nist20/scaffold_1_rnd1/version_0/best.ckpt]
+#     save-dir: [scaffold_1_rnd1/preds_train_100]
+#
+#  -  split-name: [scaffold_1.tsv]
+#     checkpoint-pth: [results/dag_nist20/scaffold_1_rnd2/version_0/best.ckpt]
+#     save-dir: [scaffold_1_rnd2/preds_train_100]
+#
+#  - split-name: [scaffold_1.tsv]
+#    checkpoint-pth: [results/dag_nist20/scaffold_1_rnd3/version_0/best.ckpt]
+#    save-dir: [scaffold_1_rnd3/preds_train_100]
