--- a/configs/iceberg/dag_inten_train_nist20.yaml
+++ b/configs/iceberg/dag_inten_train_nist20.yaml
@@ -54,16 +54,27 @@ iterative_args:
      magma-dag-folder: [results/dag_nist20/split_1_rnd1/preds_train_100_inten.hdf5]
      seed: [1]
 
-  -  split-name: [split_1.tsv]
-     save-dir: [split_1_rnd2]
-     magma-dag-folder: [results/dag_nist20/split_1_rnd2/preds_train_100_inten.hdf5]
-     seed: [2]
-
-  -  split-name: [split_1.tsv]
-     save-dir: [split_1_rnd3]
-     magma-dag-folder: [results/dag_nist20/split_1_rnd3/preds_train_100_inten.hdf5]
-     seed: [3]
-
-  -  split-name: [scaffold_1.tsv]
-     save-dir: [scaffold_1]
-     magma-dag-folder: [results/dag_nist20/scaffold_1/preds_train_100_inten.hdf5]
+#  -  split-name: [split_1.tsv]
+#     save-dir: [split_1_rnd2]
+#     magma-dag-folder: [results/dag_nist20/split_1_rnd2/preds_train_100_inten.hdf5]
+#     seed: [2]
+#
+#  -  split-name: [split_1.tsv]
+#     save-dir: [split_1_rnd3]
+#     magma-dag-folder: [results/dag_nist20/split_1_rnd3/preds_train_100_inten.hdf5]
+#     seed: [3]
+#
+#  -  split-name: [scaffold_1.tsv]
+#     save-dir: [scaffold_1_rnd1]
+#     magma-dag-folder: [results/dag_nist20/scaffold_1_rnd1/preds_train_100_inten.hdf5]
+#     seed: [1]
+#
+#  -  split-name: [scaffold_1.tsv]
+#     save-dir: [scaffold_1_rnd2]
+#     magma-dag-folder: [results/dag_nist20/scaffold_1_rnd2/preds_train_100_inten.hdf5]
+#     seed: [2]
+#
+#  -  split-name: [scaffold_1.tsv]
+#     save-dir: [scaffold_1_rnd3]
+#     magma-dag-folder: [results/dag_nist20/scaffold_1_rnd3/preds_train_100_inten.hdf5]
+#     seed: [3]
