--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,7 +46,7 @@ dependencies = [
     "ray",
     "dgl @ ", 
     "torch-scatter @ ",
-    torch-sparse @ ",    
+    "torch-sparse @ ",    
     "torch==2.4.0+cu121 @ https://download.pytorch.org/whl/cu121",
     "torchaudio==2.4.0+cu121 @ https://download.pytorch.org/whl/cu121", 
     "torchvision==0.19.0+cu121 @ https://download.pytorch.org/whl/cu121",
